# patinate

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  renovate.json  rust-toolchain.toml
examples/site/: index.html
fixtures/: activities.json  config.toml
src/: cli.rs  lib.rs  main.rs
src/cache/: mod.rs  queries.rs  schema.rs
src/config/: mod.rs
src/obfuscation/: mod.rs
src/osm/: filter.rs  mod.rs  overpass.rs
src/render/: compose.rs  mod.rs  projection.rs  theme.rs  typography.rs
src/strava/: auth.rs  client.rs  mod.rs  sync.rs
themes/: blueprint_heat.json  cycle_heat.json  noir_heat.json  warm_beige.json
web/: .npmrc  astro.config.mjs  package-lock.json  package.json  wrangler.toml
web/src/layouts/: Layout.astro
web/src/pages/: index.astro
web/src/styles/: global.css
