[package]
name = "patinate"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Andrew G. Dunn <andrew@dunn.dev>"]
description = "Render Strava activity into stylized heatmap posters and inline SVG. Real polyline-circle obfuscation. Privacy flags for shippable renders."
repository = "https://gitlab.com/dunn.dev/patinate"
homepage = "https://gitlab.com/dunn.dev/patinate"
documentation = "https://gitlab.com/dunn.dev/patinate#readme"
readme = "README.md"
license = "MIT"
keywords = ["strava", "heatmap", "cycling", "osm", "poster"]
categories = ["command-line-utilities", "visualization"]
publish = true

[[bin]]
name = "patinate"
path = "src/main.rs"

[dependencies]
# error / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# config + serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }

# strava
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
oauth2 = "5"
tokio = { version = "1", features = ["rt", "macros", "fs", "sync"] }
url = "2"

# polyline + geo
polyline = "0.11"
geo = "0.29"
geo-types = "0.7"

# storage
rusqlite = { version = "0.32", features = ["bundled"] }

# render
svg = "0.18"

# directories
directories = "6"

# misc
chrono = { version = "0.4", features = ["serde"] }

# constant-time comparisons (CSRF state check)
subtle = "2"

# gzip decode for OSM fixtures (fetch-osm output is gzipped)
flate2 = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
